# parkings-weather-correlation

./: .gitignore  README.md  main.py  pyproject.toml  results.md
prophet/: parkings_porthaninkatu6_prophet.ipynb  parkings_puutarhakatu6_prophet.ipynb  parkings_zone1_prophet.ipynb  utils.py
scikit/: linear_regression.ipynb  linear_regression_zone1.ipynb  mlp_regressor.ipynb  mlp_regressor_porthaninkatu6.ipynb  mlp_regressor_puutarhakatu6.ipynb  mlp_regressor_zone1.ipynb  utils.py  xgboost.ipynb  xgboost_zone1.ipynb
